# richeatta

./: Cargo.toml  README.md  TODO
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: main.rs  memory.rs  ui.rs
src/memory/: data_types.rs  linux.rs  macos.rs  windows.rs
tests/: test_on_lab_rat.rs
