[package]
name = "richeatta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.4"
clap = { version = "4.4.6", features = ["derive"] }
nix = { version = "0.27.1", features = ["process", "uio"] }
procfs = "0.16.0-RC1"
