[package]
name = "richeatta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "richeatta"
path = "src/main.rs"

[[bin]]
name = "lab_rat"
path = "src/bin/lab_rat.rs"

[lib]
name = "richeatta"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.4"
nix = { version = "0.28.0", features = ["process", "uio"] }
procfs = "0.16.0-RC1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "handleapi",
    "processenv",
    "processthreadsapi",
    "memoryapi",
    "winnt"
] }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3.2"
